# connector-benchmark

./: .gitignore  README.md  bench.cmd  bench.sh  show_results.py
java/src/main/java/org/java/connector/: Common.java  Insert_batch.java  Select_1.java  (+1 more)
scripts/c/: main-benchmark.cc
scripts/cpp/: main-benchmark.cc
scripts/dotnet/: Benchmark.csproj  Benchmark.sln  Program.cs
scripts/go/: benchmark_test.go  go.mod
scripts/java/: pom.xml
scripts/node/: benchmark-one.js  benchmarks-all.js  common-bench.js  package.json
scripts/node/benchs/: do_1000_params_execute.js  insert_batch.js  select_1000_rows.js  select_1000_rows_execute.js  select_1000_rows_noid.js  select_100_int_execute.js  select_100_int_varchar.js  select_1_pool.js
scripts/odbc/: main-benchmark  main-benchmark.cc
scripts/python/: BENCHMARKS.md  Makefile  README.md  bench.py  conf_test.py  conftest.py  example_usage.sh  internal_bench.py  requirements-bench.txt  run_all_benchmarks.py  run_all_benchmarks.sh  run_benchmarks.py  test_bench_do_1.py  test_bench_do_1000_params.py  test_bench_do_1000_params_async.py  test_bench_do_1_async.py  test_bench_insert_batch.py  test_bench_insert_batch_async.py  test_bench_select_1.py  test_bench_select_1000_rows.py  test_bench_select_1000_rows_async.py  test_bench_select_100_cols.py  test_bench_select_100_cols_async.py  test_bench_select_1_async.py  test_bench_select_1_pool.py
scripts/python/benchmark/: select_1000_rows.py
scripts/rust/: Cargo.toml
scripts/rust/benches/: my_benchmark.rs
scripts/rust/src/: lib.rs
scripts/setup/: setup.py
(+7 files in other folders)
