[package]
name = "untitled"
version = "0.0.0"
authors = ["rusher <diego.dupin@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
criterion = { version = "0.5.1"}

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
quote = "1.0.36"
proc-macro2 = "1.0.82"
syn = "1.0.109"
mysql = "25.0.0"
